# vlkn

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  app.cpp  app.hpp  callbacks.cpp  callbacks.hpp  common.cpp  first_app.cpp  first_app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  mouse_movement_controller.cpp  mouse_movement_controller.hpp  render_system.cpp  render_system.hpp  vlkn_camera.cpp  vlkn_camera.hpp  vlkn_device.cpp  vlkn_device.hpp  vlkn_game_object.hpp  vlkn_model.cpp  vlkn_model.hpp  vlkn_pipeline.cpp  vlkn_pipeline.hpp  vlkn_renderer.hpp  vlkn_swap_chain.cpp  vlkn_swap_chain.hpp  vlkn_window.cpp  vlkn_window.hpp
docs/: ARCHITECTURE.md  RENDERING_PIPELINE.md
include/: stb_image.h
shaders/: point_light.frag  point_light.vert  render.frag  render.vert  render_textured.frag  render_textured.vert  shader.frag  shader.vert
src/: app.cpp  app.hpp  common.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  mouse_movement_controller.cpp  mouse_movement_controller.hpp  render_system.cpp  render_system.hpp  vlkn_buffer.cpp  vlkn_buffer.hpp  vlkn_camera.cpp  vlkn_camera.hpp  vlkn_descriptors.cpp  vlkn_descriptors.hpp  vlkn_device.cpp  vlkn_device.hpp  vlkn_frame_info.hpp  vlkn_game_object.cpp  vlkn_game_object.hpp  vlkn_image.cpp  vlkn_image.hpp  vlkn_model.cpp  vlkn_model.hpp  vlkn_pipeline.cpp  vlkn_pipeline.hpp  vlkn_renderer.cpp  vlkn_swap_chain.hpp  vlkn_utils.hpp  vlkn_window.cpp  vlkn_window.hpp
src/systems/: imgui_system.cpp  imgui_system.hpp  point_light_system.cpp  point_light_system.hpp  render_system.cpp  render_system.hpp
